<resources>
    <string name="app_name">K-Adoptiom</string>

    <!--Titles-->
    <string name="login_title">Login</string>
    <string name="signup_title">Sign up</string>

    <!--Welcome messages-->
    <string name="splash_welcome_txt">Easiest way to\nfind the the perfect Child For Adoption</string>
    <string name="login_welcome_txt">Hello there !\nWelcome Back</string>
    <string name="signup_welcome_txt">Hello there !\nWelcome to you</string>

    <string name="navigation_drawer_open">Open navigtion drawer</string>
    <string name="navigation_drawer_close">close navigtion drawer</string>

    <!--Button labels-->
    <string name="login_btn_label">Login</string>
    <string name="signup_btn_label">Signup</string>

    <string name="login_label">" Login"</string>
    <string name="signup_label">" Signup"</string>

    <string name="login_fb_btn_label">"{faw-facebook-f}    Login with Facebook"</string>
    <string name="signup_fb_btn_label">"{faw-facebook-f}    Signup with Facebook"</string>

    <string name="get_started_btn_label">Get Started</string>

    <!--Edit Text hints-->
    <string name="email_address_hint">Email Address</string>
    <string name="full_name_hint">Full Name</string>
    <string name="password_hint">Password</string>


    <!--Misc texts-->
    <string name="forgot_password">Forgot password?</string>
    <string name="no_account">Don\’t have an account?</string>
    <string name="have_account">Have an account?</string>
    <string name="divider_or">OR</string>


    <string name="name_login">Name</string>
    <string name="email_login">Email</string>
    <string name="phone_login">Phone</string>
    <string name="password_login">Password</string>
    <string name="profile_save">Edit Details</string>
    <string name="no_data_found">No Data Found</string>
</resources>