<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/containerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_margin="10dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <TextView
            android:id="@+id/login_title"
            style="@style/LabelStyle"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/sf_pro_display_medium"
            android:text="@string/login_title"
            android:textColor="@color/orange" />

        <TextView
            android:id="@+id/login_welcome_msg"
            style="@style/LabelStyle"
            android:layout_below="@id/login_title"
            android:layout_marginTop="@dimen/layout_in_between_margins"
            android:text="@string/login_welcome_txt" />

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_below="@+id/login_welcome_msg" />

        <LinearLayout
            android:id="@+id/formilo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view1"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mobile_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimaryDark">

                <EditText
                    android:id="@+id/number_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_horizontal_margin"
                    android:hint="Mobile Number"
                    android:inputType="text"
                    android:lines="1"
                    android:padding="@dimen/default_horizontal_margin"
                    android:text="254889"
                    android:textColor="@color/colorRad" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:textColorHint="@color/colorPrimaryDark"
                custom:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/password_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_horizontal_margin"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:padding="@dimen/default_horizontal_margin"
                    android:text="1234"
                    android:textColor="@color/colorRad"
                    android:textColorHint="@color/colorPrimaryDark" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_horizontal_margin"

                android:gravity="end"
                android:padding="5dp">

                <CheckBox
                    android:id="@+id/remember_me_chkb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="Remember me"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            style="@style/SolidButtonStyle"
            android:layout_width="match_parent"
            android:layout_below="@id/formilo"
            android:layout_marginTop="@dimen/layout_in_between_margins"
            android:onClick="LoginToapp"
            android:text="@string/login_btn_label" />

        <RelativeLayout
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_login"
            android:layout_marginTop="@dimen/divider_top_and_bottom_margins"
            android:layout_marginBottom="@dimen/divider_top_and_bottom_margins">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/divider_start_and_end_margins"
                android:layout_toStartOf="@id/divider_or"
                android:background="@color/divider" />

            <TextView
                android:id="@+id/divider_or"
                style="@style/LabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/divider_or"

                android:textColor="@color/divider_or"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/divider_start_and_end_margins"
                android:layout_toEndOf="@id/divider_or"
                android:background="@color/divider" />


        </RelativeLayout>

        <Button
            android:id="@+id/btn_login_fb"
            style="@style/SolidButtonStyle"
            android:layout_width="match_parent"
            android:layout_below="@id/divider"
            android:backgroundTint="@color/fb_blue"
            android:text="@string/login_fb_btn_label"
            android:textSize="16sp" />
        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_below="@+id/btn_login_fb"/>

        <RelativeLayout
            android:layout_above="@+id/view2"
            android:id="@+id/sign_up_nav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center">

            <TextView
                android:id="@+id/no_account"
                style="@style/LabelStyle"
                android:fontFamily="@font/sf_pro_display_medium"
                android:text="@string/no_account"
                android:textColor="@color/account"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/sign_up"
                style="@style/LabelStyle"
                android:layout_toEndOf="@id/no_account"
                android:fontFamily="@font/sf_pro_display_medium"
                android:onClick="signup"
                android:text="@string/signup_label"
                android:textColor="@color/orange"
                android:textSize="16sp" />
        </RelativeLayout>
    </RelativeLayout>


</ScrollView>